[package]
name = "sifive-fe310-g002"
version = "0.1.1"
authors = ["Jarred Allen <jarredallen73@gmail.com>"]
description = "Interface for peripherals on the SiFive FE310-G002 cpu"
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support"]
keywords = ["riscv", "peripherals", "bare-metal"]
repository = "https://github.com/JarredAllen/sifive-fe310-g002"
documentation = "https://docs.rs/sifive-fe310-g002/latest/sifive_fe310_g002/"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.7"
bare-metal = "1.0"
